modified:   3er-Cuatrimestre/Integradora/InterAudio/.vscode/settings.json 	modified:   3er-Cuatrimestre/Integradora/InterAudio/index.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoComax.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoIntec.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/contacto.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/instalaciones.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/nosotros.html 	modified:   3er-Cuatrimestre/Integradora/InterAudio/navegacion/servicios.html

--- a/3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoIntec.html
+++ b/3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoIntec.html
@@ -277,7 +277,7 @@
     <br />
     <footer style="background-color: #141d56; color: white">
       <p class="text-center">
-        &copy;2025 Aplicacion desarrollada con SpringFreamwork, MariaDB,
+        &copy;2025 Aplicación desarrollada con SpringFramework, MariaDB,
         bootstrap | Autor:Erick Yael Vaca Gorostieta
       </p>
     </footer>
