modified:   3er-Cuatrimestre/Integradora/InterAudio/index.html

--- a/3er-Cuatrimestre/Integradora/InterAudio/index.html
+++ b/3er-Cuatrimestre/Integradora/InterAudio/index.html
@@ -113,15 +113,25 @@
                 class="dropdown-menu"
                 style="text-align: center; color: #141d56; font-size: larger"
               >
-                <li><a class="dropdown-item" href="navegacion/instalaciones.html">Interfon</a></li>
-                  <li>
-                  <a class="dropdown-item" href="navegacion/instalaciones.html">Videoportero</a>
+                <li>
+                  <a class="dropdown-item" href="navegacion/instalaciones.html"
+                    >Interfon</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="navegacion/instalaciones.html">Abrepuertas Eléctrico</a>
+                  <a class="dropdown-item" href="navegacion/instalaciones.html"
+                    >Videoportero</a
+                  >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="navegacion/instalaciones.html">Cerca Electrificada</a>
+                  <a class="dropdown-item" href="navegacion/instalaciones.html"
+                    >Abrepuertas Eléctrico</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="navegacion/instalaciones.html"
+                    >Cerca Electrificada</a
+                  >
                 </li>
               </ul>
             </li>
@@ -144,10 +154,26 @@
                 class="dropdown-menu"
                 style="text-align: center; color: #141d56; font-size: larger"
               >
-                <li><a class="dropdown-item" href="navegacion/servicios.html">Revision</a></li>
-                <li><a class="dropdown-item" href="navegacion/servicios.html">Reparación</a></li>
-                <li><a class="dropdown-item" href="navegacion/servicios.html">Cambio de Equipo</a></li>
-                <li><a class="dropdown-item" href="navegacion/servicios.html">Mantenimiento</a></li>
+                <li>
+                  <a class="dropdown-item" href="navegacion/servicios.html"
+                    >Revision</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="navegacion/servicios.html"
+                    >Reparación</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="navegacion/servicios.html"
+                    >Cambio de Equipo</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="navegacion/servicios.html"
+                    >Mantenimiento</a
+                  >
+                </li>
               </ul>
             </li>
             <li class="nav-item">
