--- a/3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoComax.html
+++ b/3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoComax.html
@@ -12,7 +12,7 @@
     />
     <title>Catalogo Commax</title>
   </head>
-  <body>
+  <body style="background-color: #f0f0f0">
     <nav class="navbar navbar-expand-lg" style="background-color: white">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -212,7 +212,7 @@
     <br />
     <div></div>
     <br />
-    <footer style="background-color: #141d56; color: white">
+    <footer style="background-color: #141d56; color: white; font-size: large">
       <p class="text-center">
         &copy;2025 Aplicación desarrollada con SpringFramework, MariaDB,
         bootstrap | Autor:Erick Yael Vaca Gorostieta
