--- a/3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoIntec.html
+++ b/3er-Cuatrimestre/Integradora/InterAudio/navegacion/catalogoIntec.html
@@ -15,7 +15,7 @@
     />
     <title>Catalogo Intec</title>
   </head>
-  <body>
+  <body style="background-color: #f0f0f0">
     <nav class="navbar navbar-expand-lg" style="background-color: white">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -96,7 +96,10 @@
                   <a
                     class="dropdown-item"
                     href="../navegacion/catalogoComax.html"
-                    ><img src="../images/logoCommax" alt="bootstrap" width="100"
+                    ><img
+                      src="../images/logoCommax"
+                      alt="bootstrap"
+                      width="100"
                   /></a>
                 </li>
               </ul>
@@ -225,57 +228,59 @@
       </div>
     </nav>
     <br />
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
-            </p>
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a short card.</p>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a short card.</p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content.
-            </p>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <img src="..." class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              This is a longer card with supporting text below as a natural
-              lead-in to additional content. This content is a little bit
-              longer.
-            </p>
+        <div class="col">
+          <div class="card h-100">
+            <img src="..." class="card-img-top" alt="..." />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                This is a longer card with supporting text below as a natural
+                lead-in to additional content. This content is a little bit
+                longer.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <br />
-    <footer style="background-color: #141d56; color: white">
+    <footer style="background-color: #141d56; color: white; font-size: large">
       <p class="text-center">
         &copy;2025 Aplicación desarrollada con SpringFramework, MariaDB,
         bootstrap | Autor:Erick Yael Vaca Gorostieta
