--- a/3er-Cuatrimestre/Integradora/InterAudio/navegacion/instalaciones.html
+++ b/3er-Cuatrimestre/Integradora/InterAudio/navegacion/instalaciones.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../bootstrap-5.3.3-dist/css/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="../bootstrap-5.3.3-dist/css/bootstrap.min.css"
+    />
     <script src="../https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
     <link
@@ -12,7 +15,7 @@
     />
     <title>Instalaciones</title>
   </head>
-  <body>
+  <body style="background-color: #f0f0f0">
     <nav class="navbar navbar-expand-lg" style="background-color: white">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
@@ -80,7 +83,9 @@
                 style="text-align: center; color: #141d56; font-size: larger"
               >
                 <li>
-                  <a class="dropdown-item" href="../navegacion/catalogoIntec.html"
+                  <a
+                    class="dropdown-item"
+                    href="../navegacion/catalogoIntec.html"
                     ><img
                       src="../images/LogoIntec.jpg"
                       alt="bootstrap"
@@ -88,8 +93,13 @@
                   /></a>
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../navegacion/catalogoComax.html"
-                    ><img src="../images/logoCommax" alt="bootstrap" width="100"
+                  <a
+                    class="dropdown-item"
+                    href="../navegacion/catalogoComax.html"
+                    ><img
+                      src="../images/logoCommax"
+                      alt="bootstrap"
+                      width="100"
                   /></a>
                 </li>
               </ul>
@@ -114,22 +124,30 @@
                 style="text-align: center; color: #141d56; font-size: larger"
               >
                 <li>
-                  <a class="dropdown-item" href="../navegacion/instalaciones.html"
+                  <a
+                    class="dropdown-item"
+                    href="../navegacion/instalaciones.html"
                     >Interfon</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../navegacion/instalaciones.html"
+                  <a
+                    class="dropdown-item"
+                    href="../navegacion/instalaciones.html"
                     >Videoportero</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../navegacion/instalaciones.html"
+                  <a
+                    class="dropdown-item"
+                    href="../navegacion/instalaciones.html"
                     >Abrepuertas Eléctrico</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="../navegacion/instalaciones.html"
+                  <a
+                    class="dropdown-item"
+                    href="../navegacion/instalaciones.html"
                     >Cerca Electrificada</a
                   >
                 </li>
@@ -210,9 +228,85 @@
       </div>
     </nav>
     <br />
-    <div></div>
+    <div class="container">
+      <form class="row g-3 needs-validation" novalidate>
+        <div class="col-md-4 position-relative">
+          <label for="validationTooltip01" class="form-label">First name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="validationTooltip01"
+            value="Mark"
+            required
+          />
+          <div class="valid-tooltip">Looks good!</div>
+        </div>
+        <div class="col-md-4 position-relative">
+          <label for="validationTooltip02" class="form-label">Last name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="validationTooltip02"
+            value="Otto"
+            required
+          />
+          <div class="valid-tooltip">Looks good!</div>
+        </div>
+        <div class="col-md-4 position-relative">
+          <label for="validationTooltipUsername" class="form-label"
+            >Username</label
+          >
+          <div class="input-group has-validation">
+            <span class="input-group-text" id="validationTooltipUsernamePrepend"
+              >@</span
+            >
+            <input
+              type="text"
+              class="form-control"
+              id="validationTooltipUsername"
+              aria-describedby="validationTooltipUsernamePrepend"
+              required
+            />
+            <div class="invalid-tooltip">
+              Please choose a unique and valid username.
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 position-relative">
+          <label for="validationTooltip03" class="form-label">City</label>
+          <input
+            type="text"
+            class="form-control"
+            id="validationTooltip03"
+            required
+          />
+          <div class="invalid-tooltip">Please provide a valid city.</div>
+        </div>
+        <div class="col-md-3 position-relative">
+          <label for="validationTooltip04" class="form-label">State</label>
+          <select class="form-select" id="validationTooltip04" required>
+            <option selected disabled value="">Choose...</option>
+            <option>...</option>
+          </select>
+          <div class="invalid-tooltip">Please select a valid state.</div>
+        </div>
+        <div class="col-md-3 position-relative">
+          <label for="validationTooltip05" class="form-label">Zip</label>
+          <input
+            type="text"
+            class="form-control"
+            id="validationTooltip05"
+            required
+          />
+          <div class="invalid-tooltip">Please provide a valid zip.</div>
+        </div>
+        <div class="col-12">
+          <button class="btn btn-primary" type="submit">Submit form</button>
+        </div>
+      </form>
+    </div>
     <br />
-    <footer style="background-color: #141d56; color: white">
+    <footer style="background-color: #141d56; color: white; font-size: large">
       <p class="text-center">
         &copy;2025 Aplicación desarrollada con SpringFramework, MariaDB,
         bootstrap | Autor:Erick Yael Vaca Gorostieta
