--- a/3er-Cuatrimestre/Integradora/InterAudio/navegacion/nosotros.html
+++ b/3er-Cuatrimestre/Integradora/InterAudio/navegacion/nosotros.html
@@ -6,10 +6,10 @@
     <title>INTER AUDIO - Nosotros</title>
     <link
       rel="stylesheet"
-      href="../bootstrap-5.3.3-dist/css/bootstrap.min.css"
+      href="../bootstrap/css/bootstrap.min.css"
     />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.7.2/css/all.css"
