--- a/3er-Cuatrimestre/Integradora/InterAudio/productos/catalogoIntec.html
+++ b/3er-Cuatrimestre/Integradora/InterAudio/productos/catalogoIntec.html
@@ -4,9 +4,9 @@
   <!-- Mismas meta etiquetas y enlaces que en el catálogo -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../bootstrap-5.3.3-dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+  <script src="bootstrap/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css" />
   <link rel="stylesheet" href="../css/estilos.css" />
   <title>Detalle de Producto - INTER AUDIO</title>
